# src/generated/swagger/configunstable/models/configunstable_create_query_resource_pools_response.go
@@ -1,0 +1,109 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// ConfigunstableCreateQueryResourcePoolsResponse configunstable create query resource pools response
+//
+// swagger:model configunstableCreateQueryResourcePoolsResponse
+type ConfigunstableCreateQueryResourcePoolsResponse struct {
+
+	// query resource pools
+	QueryResourcePools *ConfigunstableQueryResourcePools `json:"query_resource_pools,omitempty"`
+}
+
+// Validate validates this configunstable create query resource pools response
+func (m *ConfigunstableCreateQueryResourcePoolsResponse) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateQueryResourcePools(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *ConfigunstableCreateQueryResourcePoolsResponse) validateQueryResourcePools(formats strfmt.Registry) error {
+	if swag.IsZero(m.QueryResourcePools) { // not required
+		return nil
+	}
+
+	if m.QueryResourcePools != nil {
+		if err := m.QueryResourcePools.Validate(formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("query_resource_pools")
+			} else if ce, ok := err.(*errors.CompositeError); ok {
+				return ce.ValidateName("query_resource_pools")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+// ContextValidate validate this configunstable create query resource pools response based on the context it is used
+func (m *ConfigunstableCreateQueryResourcePoolsResponse) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.contextValidateQueryResourcePools(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *ConfigunstableCreateQueryResourcePoolsResponse) contextValidateQueryResourcePools(ctx context.Context, formats strfmt.Registry) error {
+
+	if m.QueryResourcePools != nil {
+
+		if swag.IsZero(m.QueryResourcePools) { // not required
+			return nil
+		}
+
+		if err := m.QueryResourcePools.ContextValidate(ctx, formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("query_resource_pools")
+			} else if ce, ok := err.(*errors.CompositeError); ok {
+				return ce.ValidateName("query_resource_pools")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *ConfigunstableCreateQueryResourcePoolsResponse) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *ConfigunstableCreateQueryResourcePoolsResponse) UnmarshalBinary(b []byte) error {
+	var res ConfigunstableCreateQueryResourcePoolsResponse
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
