# src/generated/swagger/configunstable/models/configunstable_delete_query_resource_pools_response.go
@@ -1,0 +1,11 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+// ConfigunstableDeleteQueryResourcePoolsResponse configunstable delete query resource pools response
+//
+// swagger:model configunstableDeleteQueryResourcePoolsResponse
+type ConfigunstableDeleteQueryResourcePoolsResponse interface{}
